frontend/src/app/landing-page/landing-page.component.css
.landing-page {
  display: flex;
  width: 912px;
}

section {
  width: 50%;
}

@media screen and (max-width: 719px) {
  .landing-page {
    display: block;
    width: auto;
  }

  section {
    width: 100%;
  }
}

section {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

form mat-form-field, button, a[mat-raised-button] {
  width: 100%;
}

h2, p {
  text-align: center;
}

/* Chrome, Safari, Edge, Opera */
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

/* Firefox */
input[type=number] {
  -moz-appearance: textfield;
}

